--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-clipboard2": "^0.3.1",
     "vue-cropper": "^0.5.5",
     "vue-qr": "^2.3.0",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^3.1.0"
