--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-qr": "^2.3.0",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^3.1.0"
   },
